# nanoboot

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  env.ps1
code/1BOOT/: 1BOOT.ld  CMakeLists.txt
code/1BOOT/src/: main.cpp
code/2BOOT/: 2BOOT-SIGNED.jlink  2BOOT.jlink  2BOOT.ld  CMakeLists.txt
code/2BOOT/src/: header.cpp  main.cpp
code/common/inc/: crc32.h  fastboot_mcu.h  flash_layout.h  utils.h
code/common/src/: crc32.cpp  fastboot_mcu.cpp  utils.cpp
code/hal/base/inc/: GPIO_base.h  flash_base.h  serial_base.h  util_base.h
code/hal/nrf52832/inc/: flash.h  gpio.h  serial.h  util.h
code/hal/nrf52832/lib/: flash_layout.ld
code/hal/nrf52832/src/: UTIL.cpp  flash.cpp  gpio.cpp  serial.cpp  util.cpp
code/testapp/: CMakeLists.txt  main.cpp  testapp.ld
docs/: configurations.md
nuget/: nuget.config  packages.config
scripts/: Flash-Hex.ps1  Get-HeaderInfo.ps1  Register-BuildEnvironment.psm1  Sign-Binary.ps1  Start-GDBServer.ps1  Utils.psm1
toolchain/: nrf52dk.jscript  windows10-amd64-arm-none-eabi-gcc.cmake
toolchain/arch/: windows10-amd64-arm-none-eabi-gcc.cmake  windows10-amd64-avr-gcc.cmake
toolchain/mcu/atxmega32e5/: atxmega32e5.cmake
toolchain/mcu/nrf52832/: nrf52832.cmake  testapp.jlink
